:tip-caption: :bulb:
endif::[]

All important changes of this project must be documented in this file.

The format is based on http://keepachangelog.com/en/1.0.0/[Keep a Changelog]
and this project adheres to http://semver.org/spec/v2.0.0.html[Semantic Versioning].

[discrete]
==== Versions

toc::[]

== link:{link-repository}/releases/latest[Unreleased]

=== Added

* `or` ArgumentConstraint
* `spiesOnly` in the Gradle extension, in order to tell the processor to only create `kspy`, while adding all known mocks
* `vararg` is now supported by Mocks
* `freezeOnDefault` in the Gradle extension, which sets a default freeze value for `kspy` and `kmock`
* `enableNewOverloadingNames` and `useTypePrefixFor` for overloaded names in order to ease them
* `customMethodNames` in order to allow complete custom names for methods
* `allowInterfaces`, which combines `allowInterfacesOnKmock` and `allowInterfacesOnKspy`
* `disableFactories` in order to disable the generation of `kmock` and `kspy` if needed
* `customAnnotationsForMeta` to provide a hook for the usage of customized annotation for meta/shared sources

=== Changed

* Generated mocks don't contain runtime logic any longer
* Mutable properties of Proxies now separate froze/unfrozen state is cleaner to improve Runtime
* `kmock` and `kspy` are using now a shared function to improve compile time
* Non intrusive behaviour (spy & relaxation) is now resolved by proxy invocation rather then by proxy initialisation in order to cover edge cases

=== Deprecated

* `uselessPrefixes` in the Gradle Extension

=== Removed

* `allowedRecursiveTypes`, since it is no longer needed due to the new spy invocation
* `allowInterfacesOnKmock`, use allowInterfaces instead
* `allowInterfacesOnKspy`, use allowInterfaces instead

=== Fixed

* Method names with nullable or multi-bounded types defined as generic parameter
* Scoped extension are now correctly resolved

=== Security

=== Bumped

* KotlinPoet 1.10.2 -> 1.11.0
* Gradle 7.4.1 -> 7.4.2

