@@ -6,7 +6,7 @@
 
 # Gradle
 org.gradle.jvmargs=-Xmx2048m
-org.gradle.parallel=true
+org.gradle.parallel=false
 org.gradle.dependency.verification.console=verbose
 # Kotlin
 kotlin.incremental.multiplatform=true
